WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262125
[WGSL] Vector constants are incorrect
https://bugs.webkit.org/show_bug.cgi?id=262125
Summary
[WGSL] Vector constants are incorrect
Tadeu Zagallo
Reported
2023-09-26 10:26:50 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-26 10:27:24 PDT
<
rdar://problem/116063871
>
Tadeu Zagallo
Comment 2
2023-09-26 10:37:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18234
EWS
Comment 3
2023-09-27 02:37:29 PDT
Committed
268499@main
(f19946127d63): <
https://commits.webkit.org/268499@main
> Reviewed commits have been landed. Closing PR #18234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug